--- a/package.xml
+++ b/package.xml
@@ -3,15 +3,12 @@
   <name>turtlebot3_selfparking</name>
   <version>1.1.0</version>
   <description>
-    This package provides four TurtleBot3 basic example include move using interactive marker, move and stop using LDS, move to goal position, move to custom routes. The interactions node is that you can control the TurtleBot3 front and back side or rotate to goal position. The obstacle node is that when the robot meets an obstacle, it stops. The patrol node is that TurtleBot3 move to custom route. There are 3 route(square, triangle, circle) in this package. You can add your route and move the TurtleBot3. The pointop node is that you can insert goal position include distance x-axis, y-axis and angluar z-axis.  
+    This package shows a simple autonomous task of turtlebot3. With the knowledge of Computer Vision and Machine Learning, the turtlebot3 can recoginize the location of parking slot relative itself roughly. To finish the navigation part accurately, some PID (or PI) controllers are designed to get to a nice position.
   </description>
   <license>Apache 2.0</license>
-  <author email="kkjong@robotis.com">Gilbert</author>
-  <maintainer email="pyo@robotis.com">Pyo</maintainer>
-  <url type="website">http://wiki.ros.org/turtlebot3_example</url>
-  <url type="emanual">http://turtlebot3.robotis.com</url>
-  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
-  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
+  <author email="zhichengyu2019@u.northwestern.edu">Zhicheng</author>
+  <maintainer email="zhichengyu2019@u.northwestern.edu">Zhicheng</maintainer>
+
   <buildtool_depend>catkin</buildtool_depend>
   <depend>rospy</depend>
   <depend>cv_bridge</depend>
